--- a/internal/web/templates/list.templ
+++ b/internal/web/templates/list.templ
@@ -152,9 +152,9 @@ templ ListContent(data ListData) {
 			</thead>
 			<tbody>
 				for _, tk := range data.Tickets {
-					<tr style="cursor: pointer;" data-href={ fmt.Sprintf("/ticket/%s", tk.ID) } data-partial={ fmt.Sprintf("/partials/ticket/%s?from=list", tk.ID) }>
+					<tr style="cursor: pointer;" data-href={ fmt.Sprintf("/ticket/%s", tk.ID) } data-partial={ fmt.Sprintf("/partials/ticket/%s", tk.ID) }>
 						<td><code>{ tk.ID }</code></td>
-						<td><a href={ templ.SafeURL(fmt.Sprintf("/ticket/%s?from=list", tk.ID)) } hx-get={ fmt.Sprintf("/partials/ticket/%s?from=list", tk.ID) } hx-target="#content" hx-push-url={ fmt.Sprintf("/ticket/%s", tk.ID) } style="color: inherit; text-decoration: none;">{ tk.Title }</a></td>
+						<td><a href={ templ.SafeURL(fmt.Sprintf("/ticket/%s", tk.ID)) } hx-get={ fmt.Sprintf("/partials/ticket/%s", tk.ID) } hx-target="#ticket-modal-body" style="color: inherit; text-decoration: none;">{ tk.Title }</a></td>
 						<td>
 							@StatusBadge(tk.Status)
 						</td>
