--- a/internal/web/templates/board.templ
+++ b/internal/web/templates/board.templ
@@ -58,7 +58,7 @@ templ BoardContent(data BoardData) {
 						@TicketCard(tk)
 					}
 					if len(col.Tickets) == 0 {
-						<div style="padding: 0.75rem; opacity: 0.4; font-size: 0.8rem; text-align: center;">
+						<div class="p-3 opacity-40 text-center" style="font-size: 0.8rem;">
 							No tickets
 						</div>
 					}
