--- a/internal/web/templates/list.templ
+++ b/internal/web/templates/list.templ
@@ -153,7 +153,7 @@ templ ListContent(data ListData) {
 			<tbody>
 				for _, tk := range data.Tickets {
 					<tr style="cursor: pointer;" data-href={ fmt.Sprintf("/ticket/%s", tk.ID) } data-partial={ fmt.Sprintf("/partials/ticket/%s", tk.ID) }>
-						<td><code>{ tk.ID }</code></td>
+						<td><code data-copy-ticket-id={ tk.ID } title="Click to copy ticket ID" class="cursor-pointer">{ tk.ID }</code></td>
 						<td><a href={ templ.SafeURL(fmt.Sprintf("/ticket/%s", tk.ID)) } hx-get={ fmt.Sprintf("/partials/ticket/%s", tk.ID) } hx-target="#ticket-modal-body" style="color: inherit; text-decoration: none;">{ tk.Title }</a></td>
 						<td>
 							@StatusBadge(tk.Status)
