more ui and workflow improvements

--- a/internal/web/templates/board.templ
+++ b/internal/web/templates/board.templ
@@ -59,7 +59,7 @@ templ BoardContent(data BoardData) {
 						@TicketCard(tk, data.RunSources[tk.Assignee])
 					}
 					if len(col.Tickets) == 0 {
-						<div class="p-3 opacity-40 text-center text-xs">
+						<div class="p-3 opacity-40 text-center">
 							No tickets
 						</div>
 					}
